--- a/latex/texdoc/bibl.bib
+++ b/latex/texdoc/bibl.bib
@@ -21,12 +21,39 @@
     keywords = {physics}
 }
 
-@online{knuthwebsite,
-    author = "Donald Knuth",
-    title = "Knuth: Computers and Typesetting",
-    url  = "http://www-cs-faculty.stanford.edu/~uno/abcde.html",
-    addendum = "(accessed: 01.09.2016)",
-    keywords = "latex,knuth"
+@online{habr_proj_infosys,
+    author = "Андрей Чадский",
+    title = "Секреты удачного проектирования ИС (информационной системы) на примере строительства больницы",
+    url  = "https://habr.com/ru/post/416525/",
+    addendum = "(Дата обращения: 07.11.2020)",
+    keywords = "habr,проектирование,информационная система"
+}
+
+@online{habr_anal_infosys,
+    author = "Андрей Чадский",
+    title = "Предпроектное обследования при разработке информационной системы",
+    url  = "https://habr.com/ru/post/432844/",
+    addendum = "(Дата обращения: 08.11.2020)",
+    keywords = "habr,проектирование,информационная система"
+}
+
+@book{fz_149,
+    title = {Федеральный закон от 27 июля 2006 года № 149-ФЗ «Об информации, информационных технологиях и о защите информации»},
+    keywords = {Федеральный закон,информационная система}
+}
+
+@online{academic_desdoc,
+    title = "Проектирование - это...",
+    url  = "https://dic.academic.ru/dic.nsf/ruwiki/282193",
+    addendum = "(Дата обращения: 07.11.2020)",
+    keywords = "словарь,академик,проектирование"
+}
+
+@online{is_reqconst,
+    title = "Этапы формирования требований к информационной системе",
+    url  = "https://www.sites.google.com/site/metodsybd/blok-5-etapy-ziznennogo-cikla/5-1-etap-formirovania-trebovanij-k-is",
+    addendum = "(Дата обращения: 08.11.2020)",
+    keywords = "информационная система,требования,проектирование"
 }
 
 @inbook{knuth-fa,
