--- a/latex/texdoc/template.tex
+++ b/latex/texdoc/template.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt]{article}
+\documentclass[14pt]{extarticle}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T2A,T1]{fontenc}
@@ -10,6 +10,7 @@
 
 \usepackage{titlesec}
 \titleformat{\section}{\normalfont\bfseries\centering}{\thesection}{1em}{}
+\titleformat{\subsection}{\normalfont\bfseries}{\thesubsection}{1em}{}
 \usepackage{setspace}
 \singlespacing
 %\onehalfspacing
@@ -21,3 +22,4 @@
 \usepackage[backend=biber]{biblatex}
 \addbibresource{~/texdoc/bibl.bib}
 \input{~/texdoc/unibind.tex}
+
