--- a/latex/texdoc/unibind.tex
+++ b/latex/texdoc/unibind.tex
@@ -2,7 +2,7 @@
 	\begin{titlepage}
 	\begin{center}
 	  \mdseries
-	  \large Федеральное государственное бюджетное образовательное учреждение
+	  \normalsize Федеральное государственное бюджетное образовательное учреждение
 
 	высшего образования 
 
@@ -11,25 +11,25 @@
 	  \textsc{\normalsize #2} % Факультет
 	  \vskip.1in
 	  \normalsize #3 % Кафедра
-	  \vskip2.5in
+	  \vskip2.1in
 
 	  \bfseries
-	  \Large #4 % Тип Работы
+	  \large #4 % Тип Работы
 	  \par
-	  \Large #5 % Название
+	  \large #5 % Название
 	\end{center}
 	
 	\vskip2.0in
 	
 	\begin{minipage}{.25\textwidth}
 	  \begin{flushleft}
-	    \bfseries\large Принял:\par #6\par #7
+	    \bfseries\normalsize Принял:\par\mdseries #6\par #7
 	  \end{flushleft}
 	\end{minipage}
 	\hskip.4\textwidth
 	\begin{minipage}{.25\textwidth}
 	  \begin{flushleft}
-	    \bfseries\large Выполнил:\par #8\par #9
+	    \bfseries\normalsize Выполнил:\par\mdseries #8\par #9
 	  \end{flushleft}
 	\end{minipage}
 
@@ -37,7 +37,7 @@
 	\hskip.65\textwidth
 	\begin{minipage}{.25\textwidth}
 	  \begin{flushleft}
-	    \bfseries\large Дата: \today
+	    \bfseries\normalsize Дата: \mdseries\today
 	  \end{flushleft}
 	\end{minipage}
 	
@@ -45,9 +45,9 @@
 	
 	\centering
 	\bfseries
-	\large г. Калининград
+	\normalsize г. Калининград
 	\par
-	\large \the\year г.
+	\normalsize \the\year г.
 	\end{titlepage} 
 }
 
