--- a/latex/texdoc/bibl.bib
+++ b/latex/texdoc/bibl.bib
@@ -64,3 +64,17 @@
     chapter = "1.2",
     keywords  = "knuth,programming"
 }
+
+@book{wcrf,
+    title = {Трудовой кодекс Российской Федерации от 30.12.2001 N 197-ФЗ (ред. от 09.03.2021)},
+    keywords = {Трудовой кодекс}
+}
+
+@book{bre,
+    title = {Государство},
+    author = {А. С. Автономов, В. А. Попов},
+    series = {Большая российская энциклопедия},
+    year = {2004—2017.},
+    publisher = {гл. ред. Ю. С. Осипов. — М.},
+    keywords = {энциклопедия}
+}
